<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SwiP</string>

    <!-- specifies the build type for eclipse, either NORMAL or FOSS-->
    <!--<string name="build_type">NORMAL</string>-->

    <string name="action_settings">Settings</string>
    <string name="tab_profile_title">Profiles</string>
    <string name="tab_trigger_title">Triggers</string>
    <string name="menu_new_profile">New Profile</string>
    <string name="menu_new_trigger">New Trigger</string>
    <string name="default_profile_default">Default</string>
    <string name="default_profile_home">Home</string>
    <string name="default_profile_meeting">Meeting</string>
    <string name="pref_default_name">Insert name</string>
    <string name="menu_settings">Settings</string>
    <string name="textNotificationContentText">Touch to change profile</string>
    <string name="textNotificationTitle">SwiP - </string>
    <string name="textNotificationNoProfile">None</string>
    <string name="textListDialogTitle">Choose a profile</string>
    <string name="profileApplied">was applied!</string>
    <string name="title_activity_list_dialog">ListDialogActivity</string>
    <string name="button_edit">Edit</string>
    <string name="NotFormatable">Unable to format tag to NDEF</string>
    <string name="NotSupported">Tag doesn\'t seem to support NDEF format</string>
    <string name="ReadOnly">Read-only Tag!</string>
    <string name="DialogNotEnoughSpaceTitle">Tag too small!</string>
    <string name="DialogNotEnoughSpaceMessage1">The tag doesn\'t seem to have enough space!</string>
    <string name="DialogNotEnoughSpaceMessage2">Please get hold of a larger tag</string>
    <string name="DialogPositive">Write</string>
    <string name="DialogNegative">Cancel</string>
    <string name="DialogNeutral">OK</string>
    <string name="nfcNotEnabledTitle">NFC not enabled!</string>
    <string name="nfcNotEnabledDialog1">Your device seems to support NFC, but it\'s disabled.</string>
    <string name="nfcNotEnabledDialog2">Please enable it and try again.</string>
    <string name="TagSuccessful">Tag written successfully.</string>
    <string name="NfcWrite">Touch tag to write</string>
    <string name="title_activity_nfc_writer">Write To NFC Tag</string>
    <string name="title_activity_nfc_reader">NfcReaderActivity</string>
    <string name="settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="developers">Developers</string>
    <string name="aboutDevelopedBy1">This app has been developed by:</string>
    <string name="aboutDevelopedBy2">Dominik KÃ¶ltringer &amp;\u0020</string>
    <string name="FlorianSchrofner">Florian Schrofner</string>
    <string name="libraries">Libraries</string>
    <string name="credits1">The SliderPreferences were developed by:</string>
    <string name="credits2">Jay Weisskopf, 2012</string>
    <string name="credits3">They are licensed under:</string>
    <string name="credits4"><u>MIT-License</u></string>
    <string name="credits5">The RootTools Library was developed by:</string>
    <string name="credits6">Stephen Erickson, Chris Ravenscroft, Dominik Schuermann, Adam Shanks, 2012</string>
    <string name="credits7"><u>Apache2-License</u></string>
    <string name="credits8">We thank them for a solid basis to work on</string>
    <string name="translators">Translators</string>
    <string name="translators_chinese1">Chinese -\u0020</string>
    <string name="translators_chinese2">ContactFront</string>
    <string name="translators_czech">Czech - Jan K.</string>
    <string name="translators_dutch">Dutch - Antonius Augustus</string>
    <string name="translators_french">French - pos</string>
    <string name="translators_italian1">Italian -\u0020</string>
    <string name="translators_italian2">Claudio Arseni</string>
    <string name="translators_polish">Polish - sti</string>
    <string name="translators_portuguese1">Portuguese -\u0020</string>
    <string name="translators_portuguese2">Diogo Sena</string>
    <string name="translators_russian1">Russian -\u0020</string>
    <string name="translators_russian2">Dm. Chernogaev</string>
    <string name="translators_slovak">Slovak - pyler</string>
    <string name="translators_spanish">Spanish - Alejandro Caral Ferro</string>
    <string name="translators_ukrainian">Ukrainian - Andrulko</string>
    <string name="ourLicense">This app is licensed under</string>
    <string name="ourLicense2"><u>GPLv3</u></string>
    <string name="title_activity_profile_fragment">ProfileFragment</string>
    <string name="title_activity_trigger_fragment">TriggerFragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_map_view">Geofence</string>
    <string name="mapRadius">Radius (in meters):</string>
    <string name="save">Save</string>
    <string name="ignored">Ignored</string>
    <string name="clearMap">Clear</string>
    <string name="changeMapSat">Change view to satellite</string>
    <string name="changeMapNormal">Change view to normal</string>
    <string name="long_press_nfc">Write on NFC-Tag</string>
    <string name="long_press_enable">Enable</string>
    <string name="long_press_disable">Disable</string>
    <string name="delete">Delete</string>
    <string name="timeout_hour">%1$d hour</string>
    <string name="timeout_hours">%1$d hours</string>
    <string name="timeout_minute">%1$d minute</string>
    <string name="timeout_minutes">%1$d minutes</string>
    <string name="timeout_toast_message_single">Triggers are timed out for %1$s</string>
    <string name="timeout_toast_message_multiple">Triggers are timed out for %1$s and %2$s</string>
    <string name="timeout_dialog_title">Select Trigger Timeout</string>
    
    <!-- this value is only needed for gradle builds, it is already defined in the library otherwise -->
    <string name="text_checkbox_seekbar">Change Value</string>
    
</resources>